--- a/Task3_Temperature_Converter/index.html
+++ b/Task3_Temperature_Converter/index.html
@@ -20,7 +20,7 @@
             <div class="inp" id="inp2">
                 <p>Unit</p>
                 <select name="unit" id="unit">
-                    <option value="celcius">Celcius</option>
+                    <option value="celsius">Celsius</option>
                     <option value="fahrenheit">Fahrenheit</option>
                 </select>
             </div>
